<!--
 - strings.xml - english
 - Created by Ulises Gonzalez
 - Copyright (c) 2025. All rights reserved
-->
<resources>

    <!-- Error -->
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="timeout">Timeout</string>
    <string name="not_found">The requested information was not found</string>
    <string name="server_error">The server is experiencing issues. Please try again later</string>
    <string name="generic_http_error">An unexpected error occurred. Please try again</string>
    <string name="please_try_again_later">At the moment we cannot perform this action, please try again later</string>
    <string name="n_a" translatable="false">N/A</string>

    <!-- Welcome Screen -->
    <string name="image">Image</string>
    <string name="watch_now_your_favorites_movies">Watch now your favorites movies</string>
    <string name="you_can_see_the_top_10_of_your_favorite_movies_to_watch_whenever_you_want_and_learn_more_about_them">You can see the top 10 of your favorite movies to watch whenever you want and learn more about them</string>
    <string name="continue_text">Continue</string>

    <!-- Login Screen -->
    <string name="welcome_back">Welcome Back</string>
    <string name="here_you_can_login_with_your_credentials">Here you can login with your credentials</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>

    <!-- Container Movies Screen -->
    <string name="loading">Loading</string>

    <!-- Movies Screen -->
    <string name="no_movies">No movies</string>
    <string name="here_you_can_see_the_best_movies">Here you can see the best movies</string>
    <string name="popular_movies">Top 10 Movies</string>

    <!-- Description Screen -->
    <string name="description">Description</string>
    <string name="back">Back</string>

    <!-- Login Screen -->
    <string name="email_invalid">Email invalid</string>

</resources>
