<?xml version="1.0" encoding="utf-8"?><!--
 - activity_login.xml
 - Created by Ulises Gonzalez
 - Copyright (c) 2025. All rights reserved
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin.extra"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/bg_circle"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_back" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/margin.big"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/il_logo" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin.normal"
            android:gravity="center"
            android:text="@string/welcome_back" />

        <TextView
            android:id="@+id/subTitleTextView"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin.extra"
            android:gravity="center"
            android:text="@string/here_you_can_login_with_your_credentials" />

        <TextView
            android:id="@+id/emailTextView"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin.small"
            android:labelFor="@+id/emailEditText"
            android:text="@string/enter_your_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin.big"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:startIconContentDescription="@string/image"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordTextView"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin.small"
            android:labelFor="@+id/passwordEditText"
            android:text="@string/enter_your_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordBox"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            app:startIconContentDescription="@string/image"
            app:startIconDrawable="@drawable/ic_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                style="@style/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sigInButton"
            style="@style/primaryButton"
            android:layout_marginTop="@dimen/margin.extra"
            android:text="@string/sign_in" />

    </LinearLayout>

    <com.topmovies.mobile.widgets.loader.Loader
        android:id="@+id/loginProgressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="false"
        android:visibility="gone"
        app:textLoader="@string/loading"
        tools:visibility="gone" />

</FrameLayout>
