<?xml version="1.0" encoding="utf-8"?><!--
 - activity_welcome.xml
 - Created by Ulises Gonzalez
 - Copyright (c) 2025. All rights reserved
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/il_intro"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding.extra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/titleTextView"
            style="@style/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watch_now_your_favorites_movies" />

        <TextView
            android:id="@+id/subTitleTextView"
            style="@style/textNormal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin.big"
            android:text="@string/you_can_see_the_top_10_of_your_favorite_movies_to_watch_whenever_you_want_and_learn_more_about_them" />

        <Button
            android:id="@+id/continueButton"
            style="@style/primaryButton"
            android:text="@string/continue_text" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
